--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Como Você Enfrenta Desafios em Projetos?</title>
+    <title>Qual Animal Combina com Você?</title>
 </head>
 <body>
     <div class="caixa-principal">
-        <h1>Como Você Enfrenta Desafios em Projetos?</h1>
+        <h1>Qual Animal Combina com Você?</h1>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado"></div>
